--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
-    "deploy": "gh-pages -d docs/.vuepress/dist",
+    "deploy": "gh-pages -d ./dist",
     "deploy:build": "npm run docs:build && npm run deploy"
   },
   "repository": {
