--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "deploy:build": "npm run docs:build && npm run deploy"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "vuepress": "^1.5.4"
   },
   "keywords": [
     "vue",
     "vue-router",
+    "vuex",
     "源码解析",
     "parse",
     "doc"
